<resources>
    <string name="app_name">SafeHome</string>
    <string name="welcome">Welcome</string>
    <string name="home_description"><b>SafeHome</b> connects women and girls to safe women sponsored homes.</string>
    <string name="continue_text">Tap to continue ></string>
    <string name="select_need">I’m in need of a safe home</string>
    <string name="select_offer">I want to offer a safe home</string>
    <string name="select_text">Select an option to continue</string>
    <string name="crisis_text">If you’re facing an <b>urgent crisis</b>, please contact the women crisis line.</string>
    <string name="photos">Photos</string>
    <string name="bio">Bio</string>
    <string name="duration_stay">Duration of Stay</string>
    <string name="welcoming">Welcoming</string>
    <string name="located_near">Located Near</string>
    <string name="chat">Chat</string>
</resources>