<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/logo_imageview"
        android:layout_width="255dp"
        android:layout_height="220dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:src="@drawable/ic_logo_safehome"
        />

    <TextView
        android:id="@+id/welcome_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:fontFamily="@font/lexend"
        android:text="@string/welcome"
        android:textColor="@color/main_pink"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/logo_imageview"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/description_textview"
        android:layout_width="257dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/logo_imageview"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="50dp"
        android:text="@string/home_description"
        android:gravity="center"
        android:textColor="@color/main_pink"
        android:fontFamily="@font/lexend"
        android:textSize="14sp"
        />

    <TextView
        android:id="@+id/continue_textview"
        android:layout_width="257dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/description_textview"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="70dp"
        android:text="@string/continue_text"
        android:gravity="center"
        android:textColor="@color/main_pink"
        android:fontFamily="@font/lexend"
        android:textSize="14sp"
        />

    <View
        android:id="@+id/screen_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>