<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeProfileActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/info_card"
        android:layout_width="match_parent"
        android:layout_height="125dp"
        app:layout_constraintTop_toTopOf="parent"
        app:cardBackgroundColor="@color/main_pink"
        app:cardElevation="5dp"
        >
        
        <androidx.cardview.widget.CardView
            android:layout_width="98dp"
            android:layout_height="95dp"
            app:cardCornerRadius="10dp"
            android:layout_marginTop="7dp"
            android:layout_marginLeft="40dp"
            >

            <ImageView
                android:id="@+id/pfp_imageview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/jessicadiaz"
                android:scaleType="centerCrop"
                />


        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/home_name_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="163dp"
            android:layout_marginTop="19dp"
            android:text="Jessica Diaz's Home"
            android:textColor="@color/white"
            android:fontFamily="@font/lexend"
            android:textStyle="bold"
            android:textSize="20sp"
            />

        <TextView
            android:id="@+id/distance_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="163dp"
            android:layout_marginTop="49dp"
            android:text="2.5Km away"
            android:textColor="@color/white"
            android:fontFamily="@font/lexend"
            android:textSize="14sp"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_heart"
            android:layout_marginTop="75dp"
            android:layout_marginLeft="163dp"
            />

        <TextView
            android:id="@+id/likes_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="189dp"
            android:layout_marginTop="73dp"
            android:text="18"
            android:textColor="@color/white"
            android:fontFamily="@font/lexend"
            android:textSize="14sp"
            />
    </androidx.cardview.widget.CardView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/info_card"
        app:layout_constraintBottom_toTopOf="@id/bottom_menu"
        >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView
            android:id="@+id/photos_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/info_card"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="29dp"
            android:text="@string/photos"
            android:textColor="@color/main_pink"
            android:textStyle="bold"
            android:fontFamily="@font/lexend"
            android:textSize="14sp"
            />

        <ImageView
            android:id="@+id/cover_imageview"
            android:layout_width="match_parent"
            android:layout_height="214dp"
            android:layout_marginHorizontal="29dp"
            android:src="@drawable/cover1"
            />

        <TextView
            android:id="@+id/bio_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="29dp"
            android:text="@string/bio"
            android:textColor="@color/main_pink"
            android:textStyle="bold"
            android:fontFamily="@font/lexend"
            android:textSize="14sp"
            />

        <TextView
            android:id="@+id/biotext_textview"
            android:layout_width="358dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:layout_marginLeft="29dp"
            android:text="Single mom with two kids and a dog located in Toronto. My safe home is children and pet friendly. Can house 3 for up to 4 months."
            android:textColor="@color/main_pink"
            android:fontFamily="@font/lexend"
            android:textSize="12sp"
            />

        <TextView
            android:id="@+id/durationstay_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginLeft="29dp"
            android:text="@string/duration_stay"
            android:textColor="@color/main_pink"
            android:textStyle="bold"
            android:fontFamily="@font/lexend"
            android:textSize="14sp"
            />

        <TextView
            android:id="@+id/durationnumber_textview"
            android:layout_width="358dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:layout_marginLeft="29dp"
            android:text="2 Months"
            android:textColor="@color/main_pink"
            android:fontFamily="@font/lexend"
            android:textSize="12sp"
            />

        <TextView
            android:id="@+id/welcoming_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginLeft="29dp"
            android:text="@string/welcoming"
            android:textColor="@color/main_pink"
            android:textStyle="bold"
            android:fontFamily="@font/lexend"
            android:textSize="14sp"
            />

        <TextView
            android:id="@+id/welcominglist_textview"
            android:layout_width="358dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:layout_marginLeft="29dp"
            android:text="3 People, Pets"
            android:textColor="@color/main_pink"
            android:fontFamily="@font/lexend"
            android:textSize="12sp"
            />

        <TextView
            android:id="@+id/Locatednear_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginLeft="29dp"
            android:text="@string/located_near"
            android:textColor="@color/main_pink"
            android:textStyle="bold"
            android:fontFamily="@font/lexend"
            android:textSize="14sp"
            />

        <TextView
            android:id="@+id/locatednearplaces_textview"
            android:layout_width="358dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:layout_marginLeft="29dp"
            android:text="School, Hospital, Grocery"
            android:textColor="@color/main_pink"
            android:fontFamily="@font/lexend"
            android:textSize="12sp"
            />

    </LinearLayout>
    </ScrollView>
    <fragment
        android:id="@+id/bottom_menu"
        android:name="com.example.technova.BottomMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout="@layout/fragment_bottom_menu"
        />
</androidx.constraintlayout.widget.ConstraintLayout>